NetBSD Problem Report #46950

From ef@math.uni-bonn.de  Thu Sep 13 10:21:46 2012
Return-Path: <ef@math.uni-bonn.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 71CA863B86D
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 13 Sep 2012 10:21:46 +0000 (UTC)
Message-Id: <20120913102143.752E51BD49@trave.math.uni-bonn.de>
Date: Thu, 13 Sep 2012 12:21:43 +0200 (CEST)
From: ef@math.uni-bonn.de
Reply-To: ef@math.uni-bonn.de
To: gnats-bugs@gnats.NetBSD.org
Subject: Typos in rpc.lockd
X-Send-Pr-Version: 3.95

>Number:         46950
>Category:       bin
>Synopsis:       Typos in rpc.lockd
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Sep 13 10:25:00 +0000 2012
>Closed-Date:    Thu Sep 13 11:10:21 +0000 2012
>Last-Modified:  Thu Sep 13 11:15:02 +0000 2012
>Originator:     Edgar Fuß
>Release:        NetBSD 6.0_POST_RC1
>Organization:
	Mathematisches Institut der Uni Bonn
>Environment:


>Description:
	There are tree identical typos in usr.sbin/rpc.lockd/lockd_lock.c
		syslog(LOG_NOTICE, "unknow 
	missing an ``n''.
>How-To-Repeat:
	Code inspection.
>Fix:
	Add three ``n'' letters.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Thu, 13 Sep 2012 11:10:21 +0000
State-Changed-Why:
Fixed, thanks.


From: "Thomas Klausner" <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46950 CVS commit: src/usr.sbin/rpc.lockd
Date: Thu, 13 Sep 2012 11:09:43 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Thu Sep 13 11:09:42 UTC 2012

 Modified Files:
 	src/usr.sbin/rpc.lockd: lockd_lock.c

 Log Message:
 Fix typo in syslog message.
 From Edgar Fuß in PR 46950.


 To generate a diff of this commit:
 cvs rdiff -u -r1.32 -r1.33 src/usr.sbin/rpc.lockd/lockd_lock.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.