Fix typo in syslog message. From Edgar Fuß in PR 46950.